testing open graph

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta property="og:title" content="La calavería, a test recipe website">
+    <meta property="og:title" content="La calavería">
+    <meta property="og:description" content="Website created to test my abilities as a web developer">
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/cooking-images.appspot.com/o/butter%20chicken.jpg?alt=media&token=e9a384d1-c518-4b9d-8633-c012844a3020">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
