--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="Website created to test my abilities as a web developer">
     <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/cooking-images.appspot.com/o/butter%20chicken.jpg?alt=media&token=e9a384d1-c518-4b9d-8633-c012844a3020">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>La calavería - a copycat recipe database website</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap" rel="stylesheet"> 
   </head>
