--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta property="og:title" content="La calavería">
-    <meta property="og:description" content="Website created to test my abilities as a web developer">
-    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/cooking-images.appspot.com/o/butter%20chicken.jpg?alt=media&token=e9a384d1-c518-4b9d-8633-c012844a3020">
+    <meta property="og:title" content="NASA - Shopify">
+    <meta property="og:description" content="Website created as a Shopify internship test">
+    <meta property="og:image" content="">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>La calavería - a copycat recipe database website</title>
+    <title>NASA - Shopify</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap" rel="stylesheet"> 
   </head>
